@@ -3,7 +3,7 @@ pkgconfig_DATA = snapd-qt.pc
 pkgconfigdir = $(libdir)/pkgconfig
 endif
 
-source_cpp = alias.cpp app.cpp assertion.cpp auth-data.cpp change.cpp channel.cpp client.cpp connection.cpp icon.cpp plug.cpp price.cpp request.cpp screenshot.cpp slot.cpp snap.cpp system-information.cpp task.cpp
+source_cpp = alias.cpp app.cpp assertion.cpp auth-data.cpp change.cpp channel.cpp client.cpp connection.cpp icon.cpp plug.cpp price.cpp request.cpp screenshot.cpp slot.cpp snap.cpp system-information.cpp task.cpp user-information.cpp
 source_moc = $(source_cpp:.cpp=_moc.cpp) client-private_moc.cpp wrapped-object_moc.cpp enums_moc.cpp
 source_h = Snapd/Alias Snapd/alias.h \
            Snapd/App Snapd/app.h \
@@ -23,6 +23,7 @@ source_h = Snapd/Alias Snapd/alias.h \
            Snapd/Snap Snapd/snap.h \
            Snapd/SystemInformation Snapd/system-information.h \
            Snapd/Task Snapd/task.h \
+           Snapd/UserInformation Snapd/user-information.h \
            Snapd/WrappedObject Snapd/wrapped-object.h
 private_h = client-private.h stream-wrapper.h
 
