@@ -1,0 +1,1 @@
+#include <Snapd/user-information.h>
